Update to Jetty 12 (#118)